Minor fixes, symc again

--- a/src/scss/julia-box.scss
+++ b/src/scss/julia-box.scss
@@ -15,7 +15,7 @@
 
 /* *****************************
 * Julia player style
-* === CONTAINER ===
+* === MAIN CONTAINER ===
 ***************************** */
 div.julia-box {
     padding: 0;
