Remove :focus outline on buttons

--- a/src/scss/julia-box.scss
+++ b/src/scss/julia-box.scss
@@ -63,6 +63,7 @@ div.julia-box {
             margin: 0;
             font-size: 1px;
             background: transparent;
+            outline: none;
         }
 
         .julia-toolbar {
